Update user routes, refactor game components and hooks to improve market panel and remove deprecated stats banner
